--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
-
-
     <link rel="stylesheet" href="src/CSS/style.css">
     <link rel="stylesheet" href="src/CSS/reset.css">
     <link rel="stylesheet" href="src/CSS/rolagem.css">
@@ -148,7 +146,7 @@
 
                 <div class="col-md-6" class="informacoes">
 
-                    <img id="imagem-homepage" class="img-fluid" style="height: 95%; width: 450px; transform: scale(1.2);" src="src/images/ilustracao-home-page.webp"
+                    <img id="imagem-homepage" class="img-fluid" style="width: 360px; border-radius: 50%; border: 2px solid var(--cor-primaria);" src="src/images/foto-homepage.png"
                         alt="Personagem da imagem da homepage na mesa">
 
                 </div>
@@ -168,17 +166,17 @@
             <div class="row">
 
                 <div class="col-md-6" class="informacoes">
-                    <img class="img-fluid" data-aos="slide-right" data-aos-delay="300" style="height: 100%;" src="src/images/ilustracao-about-me.webp"
+                    <img class="img-fluid" data-aos="slide-right" data-aos-delay="300" style="width: 500px; height: 100%; border-radius: 50%;" src="src/images/foto-sobre-mim(2).png"
                         alt="Ilustração de um personagem programando">
                 </div>
 
                 <div class="col-md-6" class="informacoes" data-aos="slide-left">
                     <h3 class="about-title">Sobre mim</h3>
-                    <p class="descricao">Sou um estudante de Bacharelado em Ciência da Computação na Universidade
+                    <p class="descricao">Sou um estudante de Ciência da Computação na Universidade
                     Federal do Amapá (Unifap) e também estagiário de Sistemas no Tribunal de Justiça do Estado do
                     Amapá (TJAP). Tenho um grande interesse pela área de programação, construção de softwares e
                     Desenvolvimento Web.</p>
-                    <p class="descricao">Como desenvolvedor web apaixonado, concentro-me em transformar ideias em soluções digitais incríveis. Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, PHP, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
+                    <p class="descricao">Minha jornada na programação é marcada pela busca constante por conhecimento, tendo habilidades em Python, Java, HTML5, CSS3, JavaScript, PHP, SQL. Ademais, tenho experiência em frameworks como Flask, Spring Boot e bibliotecas como Bootstrap, desenvolvendo aplicações robustas e visualmente atraentes.</p>
                     <p class="descricao">Estou empolgado para compartilhar meu conhecimento e experiência. Vamos explorar juntos o mundo da tecnologia e alcançar grandes feitos. Vamos construir algo incrível!</p>
 
                 </div>
@@ -751,9 +749,8 @@
 
                 <div class="col-md-6" style="display: flex; justify-content: center; align-items: center; height: 50vh;">
                     <!-- A classe img-fluid deixa a imagem responsiva e adaptável para diferentes tipos de tela -->
-                    <img class="img-fluid" data-aos="slide-right" style="margin-bottom: 90px;" src="src/images/ilustracao-contato.webp"
+                    <img class="img-fluid" data-aos="slide-right" style="border-radius: 50%; transform: scale(0.5);" src="src/images/foto-contato.png"
                         alt="Imagem ilustrativa de contato">
-
 
                 </div>
 
@@ -802,6 +799,7 @@
 
     <!------- FOOTER / RODAPÉ ------>
 
+    <hr>
     <footer class="footer">
 
         <div class="container">
