--- a/index.html
+++ b/index.html
@@ -711,11 +711,11 @@
 
                         <div class="setas-carrossel">
 
-                            <button class="btn btn-primary carousel-control-prev" type="button" data-bs-target="#mainSlider" data-bs-slide="prev" style="width: 50px; height: 50px; top: 50%; border-radius: 50px;">
+                            <button class="btn btn-primary carousel-control-prev" type="button" data-bs-target="#mainSlider" data-bs-slide="prev" style="width: 50px; height: 50px; top: 50%; border-radius: 50px; background-color: transparent;">
                                 <i class="fas fa-chevron-left"></i>
                             </button>
                             
-                            <button class="btn btn-primary carousel-control-next" type="button" data-bs-target="#mainSlider" data-bs-slide="next" style="width: 50px; height: 50px; top: 50%; border-radius: 50px;">
+                            <button class="btn btn-primary carousel-control-next" type="button" data-bs-target="#mainSlider" data-bs-slide="next" style="width: 50px; height: 50px; top: 50%; border-radius: 50px; background-color: transparent">
                                 <i class="fas fa-chevron-right"></i>
                             </button>
                             
