--- a/index.html
+++ b/index.html
@@ -907,6 +907,8 @@
 
     </footer>
 
+    <a id="botao-voltar-home" href="#"><i style="color: var(--cor-primaria);" class="bi bi-arrow-up-circle-fill"></i></a>
+
     
 
     <script src="src/JS/script.js"></script>
