--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
 
                 </div>
 
+                <!-- PHP-->
+                
+                <div class="col-md-4 service-box">
+
+                    <i class="fab fa-php">
+
+                        <h4>PHP</h4>
+
+                    </i>
+
+                </div>
+
 
                 <!-- BOOTSTRAP --->
 
@@ -336,18 +348,17 @@
 
                 </div>
 
-                <!-- PHP-->
-                <!-- 
+                <!-- RPA-->
+                
                 <div class="col-md-4 service-box">
 
-                    <i class="fab fa-php">
+                    <i class="fas fa-robot">
 
-                        <h4>PHP</h4>
-                         <p>Sistema de controle de versão distribuído para rastrear alterações no código-fonte durante o desenvolvimento de software.</p> 
+                        <h4>RPA</h4>
 
                     </i>
 
-                </div> -->
+                </div>
 
             </div>
 
