--- a/index.html
+++ b/index.html
@@ -360,6 +360,18 @@
 
                 </div>
 
+                <!-- WEB SCRAPING -->
+
+                <div class="col-md-4 service-box">
+
+                    <i class="fas fa-globe">
+
+                        <h4>Web Scraping</h4>
+
+                    </i>
+
+                </div>
+
             </div>
 
         </div>
