--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                 <div class="col-md-6" class="informacoes">
 
-                    <img id="imagem-homepage" class="img-fluid mx-auto" style="width: 360px; border-radius: 50%;"
+                    <img id="imagem-homepage" class="img-fluid mx-auto d-block" style="width: 360px; border-radius: 50%;"
                         src="src/images/foto-homepage.png" alt="Personagem da imagem da homepage na mesa">
 
                 </div>
