--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
                                 target="_blank" rel="external"><i style="margin-right: 10px;"
                                     class="bi bi-building-fill"></i>Tribunal de Justiça do Estado do Amapá</a></strong>
                     </h3> <br>
-                    <p class="descricao-experiencia"><strong>Função</strong>: Atuo como estagiário de Desenvolvimento
+                    <p class="descricao-experiencia"><strong>Função</strong>: Atua como estagiário de Desenvolvimento
                         Web no Tribunal de Justiça do Estado do Amapá, estando envolvido no desenvolvimento e
-                        implementação de aplicações back-end e front-end, seguindo práticas de programação modernas para
-                        atender às demandas específicas da organização.</p>
+                        implementação de aplicações back-end e front-end do sistema jurídico, aplicando práticas de programação modernas para
+                        atender às demandas específicas da empresa.</p>
                     <p class="descricao-experiencia"><strong>Competências</strong>: API REST · JPA (Java Persistence
                         API) · Postman API ·
                         Algoritmos · Programação (computação) · SQL · Java · PHP · Banco de dados</p>
