--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <div class="botao-baixar-cv">
 
-                        <a download href="src/arquivos/curriculo.pdf" class="btn btn-primary"><i
+                        <a download href="src/arquivos/curriculo-vitae.pdf" class="btn btn-primary"><i
                                 style="margin-right: 10px;" class="bi bi-download"></i>Baixar CV </a>
 
                     </div>
