--- a/index.html
+++ b/index.html
@@ -566,6 +566,42 @@
 
                         </div>
 
+                        <!-----  CARD / AUTOMAÇÃO CONSULTA JURÍDICA ----->
+
+                        <div class="carousel-item">
+
+                            <div class="col-12 mx-auto w-75">
+
+                                <div class="card">
+
+                                    <img src="src/images/consulta-juridica.png" alt="Sexto card"
+                                        class="card-img-top img-fluid">
+
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Automação de consulta jurídica</h5> <br>
+
+                                        <a href="https://github.com/26Tassiofernandes/automacao-consulta-juridica" target="_blank"
+                                            rel="external" class="btn btn-primary" style="width: 100%;">Visitar</a>
+                                        <br><br>
+                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-consulta-juridica"
+                                            role="button" aria-expanded="false" aria-controls="collapseExample"
+                                            style="width: 100%;">Ver descrição</a>
+
+                                        <div class="collapse" id="descricao-card-consulta-juridica"> <br>
+
+                                            <p class="card-text">Este é um projeto destinado a automatizar operações de pesquisa jurídica, melhorando a eficácia em tarefas diárias e simplificando processos de consulta no âmbito jurídico.<p>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
                         <!--  TERCEIRO / PROJETO TERROR -->
 
                         <div class="carousel-item">
@@ -753,45 +789,7 @@
                             </div>
 
                         </div>
-
-                        <!---- OITAVO CARD / CALCULADORA DE IMC---->
-
-                        <div class="carousel-item">
-
-                            <div class="col-12 mx-auto w-75">
-
-                                <div class="card">
-
-                                    <img src="src/images/calculadora-imc.png" alt="Oitavo card"
-                                        class="card-img-top img-fluid">
-
-                                    <div class="card-body">
-
-                                        <h5 class="card-title">Calculadora de IMC</h5> <br>
-
-                                        <a href="https://26tassiofernandes.github.io/Calculador-de-IMC/imc.html"
-                                            target="_blank" rel="external" class="btn btn-primary"
-                                            style="width: 100%;">Visitar</a> <br><br>
-                                        <a class="btn btn-primary" data-bs-toggle="collapse" href="#descricao-card-8"
-                                            role="button" aria-expanded="false" aria-controls="collapseExample"
-                                            style="width: 100%;">Ver descrição</a>
-
-                                        <div class="collapse" id="descricao-card-8"> <br>
-
-                                            <p class="card-text">Calculadora de IMC que aceita entrada de altura e peso
-                                                para determinar o índice de massa corporal, oferecendo uma solução
-                                                direta e eficiente.</p>
-
-                                        </div>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
+         
 
                         <!--- SETAS DO CARROSSEL --->
 
